Updated tärendö so that it does not depend on DataTables css

--- a/examples/tärendö/tärendö.css
+++ b/examples/tärendö/tärendö.css
@@ -2,3 +2,16 @@ caption {
     text-align: center;
     font-weight: bold;
 }
+
+th {
+    position: relative;
+    cursor: pointer;
+}
+
+.sorting-icon {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    display: block;
+    opacity: 0.5;
+}
